<resources>
    <string name="app_name">BancoApp</string>
    <string name="abrir_drawer">Abrir</string>
    <string name="fechar_drawer">Fechar</string>
    <string name="bemvindo">Seja Bem Vindo!</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="logar">Entrar</string>
    <string name="appos">AppOS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro">Cadastrar Conta</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="user">Conta Corrente</string>
    <string name="vip">Você é Vip?</string>
    <string name="sim">sim</string>
    <string name="nao">não</string>
    <string name="cadastrar">Concluir</string>
    <string name="departamento">Departamento</string>
    <string name="debito_saldo">debito</string>
    <string name="data">data</string>
    <string name="saldo">Saldo</string>
    <string name="extrato">Extrato</string>
    <string name="transferencia">Transferência</string>
    <string name="temconta">Criar</string>
    <string name="saque">Saque</string>
    <string name="deposito">Depósito</string>
    <string name="valordeposito">Valor que deseja depositar</string>
</resources>
