<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtcadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="27sp" />

        <TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/fragCadastroNome"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="110dp"
                    android:backgroundTint="@color/orangePrimary"
                    android:hint="@string/nome"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:targetApi="lollipop" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/fragCadastroEmail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="110dp"
                    android:backgroundTint="@color/orangePrimary"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:targetApi="lollipop" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/fragCadastroUser"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="110dp"
                    android:backgroundTint="@color/orangePrimary"
                    android:hint="@string/user"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:targetApi="lollipop" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">


                <EditText
                    android:id="@+id/fragCadastroSenha"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="110dp"
                    android:backgroundTint="@color/orangePrimary"
                    android:hint="@string/senha"
                    android:inputType="numberPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    tools:targetApi="lollipop" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/vip"
                android:text="@string/vip"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnSim"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:text="@string/sim"
        android:layout_marginLeft="110dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="110dp" />
    <Button
        android:id="@+id/btnNao"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:text="@string/nao"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnredondo"
        android:text="@string/cadastrar"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>