<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/cardViewGroup"
    app:cardCornerRadius="10dp">
    <!--Cardview-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearCardView"
        android:background="@color/grey"
        android:orientation="vertical">
    <!--estabelecimento-->
        <TextView
            android:id="@+id/adapter_cardView_txvData"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/data"
            android:textColor="@color/orangePrimary"
            android:textSize="15sp" />

        <TextView
        android:id="@+id/adapter_cardView_txvEstab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/departamento"
        android:textColor="@color/orangePrimary"
        android:layout_marginStart="5dp" />


        <!--Débito/Saldo-->

        <TextView
            android:id="@+id/adapter_cardView_txvDebito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:text="@string/debito_saldo"
            android:textColor="@color/green"
            android:layout_marginStart="5dp" />

        <!--Data-->
    </LinearLayout>

</android.support.v7.widget.CardView>